// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Extensive/Form/Wizard Create Form 1`] = `
<div
  className="flex w-full justify-center bg-background px-3"
>
  <div>
    <div
      className="sticky top-[74px] z-40 flex border-neutral-150 bg-treesHeaderWithOverlay bg-cover bg-no-repeat px-10 py-3 md:py-8"
    >
      <div
        className="mx-auto flex w-full min-w-0 max-w-[82vw] items-center gap-8"
      >
        <div
          className="min-w-0 flex-grow text-white"
        >
          <div
            className="flex"
          >
            <p
              className="overflow-hidden text-ellipsis whitespace-nowrap text-14-light"
              data-testid="txt"
            >
              Progress: 1/8 steps complete
            </p>
            <p
              className="text-14-light"
              data-testid="txt"
            >
              Unsaved
            </p>
          </div>
        </div>
        <button
          className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-[10.5px] rounded-md px-4 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black min-h-10 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
          onClick={[Function]}
        >
          <span
            className="flex items-center text-bold-caption-200"
          >
            Close and continue later
          </span>
        </button>
      </div>
    </div>
    <div
      className="mx-auto mt-0 max-w-[82vw] px-6 py-10 xl:px-0"
    >
      <div
        className="flex h-full w-full rounded-2xl shadow"
      >
        <div
          aria-orientation="vertical"
          className="flex w-full max-w-[86px] flex-grow flex-col md:max-w-[280px] h-[calc(100vh-285px)] overflow-auto"
          role="tablist"
        >
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3g:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 1<br/> <p className=\\"text-14-light\\">Simple Inputs </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3h:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 2<br/> <p className=\\"text-14-light\\">Dropdown Inputs </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="true"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b border-neutral-100 border-r-white bg-white text-neutral-1000 peer-aria-checked:shadow-t-secondary"
            data-headlessui-state="selected"
            disabled={false}
            id="headlessui-tabs-tab-:r3i:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={0}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 3<br/> <p className=\\"text-14-light\\">Select Inputs </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3j:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 4<br/> <p className=\\"text-14-light\\">File Uploader </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3k:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 5<br/> <p className=\\"text-14-light\\">Tree species input </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3l:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 6<br/> <p className=\\"text-14-light\\">Funding Sources </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3m:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 7<br/> <p className=\\"text-14-light\\">Info of proposed projects </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r3n:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Step 8<br/> <p className=\\"text-14-light\\">Map </p>",
                }
              }
              data-testid="txt"
            />
          </button>
          <div
            className="flex-1 border border-neutral-100 bg-white"
          />
        </div>
        <div
          className="w-full overflow-hidden border border-l-0 border-neutral-100"
        >
          <div
            className="h-[calc(100vh-287px)] overflow-auto"
          >
            <div
              className="flex-1 bg-white px-16 pt-8 pb-15"
              id="step"
            >
              <div
                className="flex items-center justify-between"
              >
                <p
                  className="text-heading-700"
                  data-testid="txt"
                >
                  Select Inputs
                </p>
              </div>
              <p
                className="mt-8 text-body-600 with-inner-html"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "These are all simple inputs",
                  }
                }
                data-testid="txt"
              />
              <div
                className="my-8 h-[2px] w-full bg-neutral-200"
              />
              <ul>
                <li
                  className="mt-8"
                >
                  <div
                    className="relative space-y-2"
                  >
                    <label
                      className="mr-2 inline uppercase text-bold-body-300"
                      data-testid="txt"
                      htmlFor=":r3o:"
                    >
                      Select component *
                    </label>
                    <div
                      className="space-y-3"
                    >
                      <label
                        className="flex items-center flex-row-reverse justify-end gap-3"
                        htmlFor=":r3p:"
                      >
                        <p
                          className="text-light-caption-200"
                          data-testid="txt"
                        >
                          Option 1
                        </p>
                        <input
                          checked={false}
                          className="flex-row-reverse justify-end gap-3"
                          id=":r3p:"
                          label="Option 1"
                          onClick={[Function]}
                          type="radio"
                        />
                      </label>
                      <label
                        className="flex items-center flex-row-reverse justify-end gap-3"
                        htmlFor=":r3q:"
                      >
                        <p
                          className="text-light-caption-200"
                          data-testid="txt"
                        >
                          Option 2
                        </p>
                        <input
                          checked={false}
                          className="flex-row-reverse justify-end gap-3"
                          id=":r3q:"
                          label="Option 2"
                          onClick={[Function]}
                          type="radio"
                        />
                      </label>
                      <label
                        className="flex items-center flex-row-reverse justify-end gap-3"
                        htmlFor=":r3r:"
                      >
                        <p
                          className="text-light-caption-200"
                          data-testid="txt"
                        >
                          Option 3
                        </p>
                        <input
                          checked={false}
                          className="flex-row-reverse justify-end gap-3"
                          id=":r3r:"
                          label="Option 3"
                          onClick={[Function]}
                          type="radio"
                        />
                      </label>
                    </div>
                  </div>
                </li>
                <li
                  className="mt-8"
                >
                  <div
                    className="relative space-y-2"
                  >
                    <label
                      className="mr-2 inline uppercase text-bold-body-300"
                      data-testid="txt"
                      htmlFor=":r3s:"
                    >
                      Multi-Select component *
                    </label>
                    <div
                      className="space-y-3"
                    >
                      <div
                        className="flex-row-reverse justify-end gap-3"
                      >
                        <label
                          className="w-full"
                          htmlFor=":r3t:"
                        >
                          <label
                            className="max-w-[365px] undefined text-body-600 with-inner-html"
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Option 1 ",
                              }
                            }
                            data-testid="txt"
                            htmlFor=":r3t:"
                          />
                        </label>
                        <input
                          checked={false}
                          className="h-4 w-4 cursor-pointer rounded-sm border-neutral-400 transition-all duration-300 checked:text-primary-500 focus:ring-transparent disabled:bg-neutral-400 lg:h-5 lg:w-5"
                          id=":r3t:"
                          name=""
                          onClick={[Function]}
                          type="checkbox"
                        />
                      </div>
                      <div
                        className="flex-row-reverse justify-end gap-3"
                      >
                        <label
                          className="w-full"
                          htmlFor=":r3u:"
                        >
                          <label
                            className="max-w-[365px] undefined text-body-600 with-inner-html"
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Option 2 ",
                              }
                            }
                            data-testid="txt"
                            htmlFor=":r3u:"
                          />
                        </label>
                        <input
                          checked={false}
                          className="h-4 w-4 cursor-pointer rounded-sm border-neutral-400 transition-all duration-300 checked:text-primary-500 focus:ring-transparent disabled:bg-neutral-400 lg:h-5 lg:w-5"
                          id=":r3u:"
                          name=""
                          onClick={[Function]}
                          type="checkbox"
                        />
                      </div>
                      <div
                        className="flex-row-reverse justify-end gap-3"
                      >
                        <label
                          className="w-full"
                          htmlFor=":r3v:"
                        >
                          <label
                            className="max-w-[365px] undefined text-body-600 with-inner-html"
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Option 3 ",
                              }
                            }
                            data-testid="txt"
                            htmlFor=":r3v:"
                          />
                        </label>
                        <input
                          checked={false}
                          className="h-4 w-4 cursor-pointer rounded-sm border-neutral-400 transition-all duration-300 checked:text-primary-500 focus:ring-transparent disabled:bg-neutral-400 lg:h-5 lg:w-5"
                          id=":r3v:"
                          name=""
                          onClick={[Function]}
                          type="checkbox"
                        />
                      </div>
                      <div
                        className="flex-row-reverse justify-end gap-3"
                      >
                        <label
                          className="w-full"
                          htmlFor=":r40:"
                        >
                          <label
                            className="max-w-[365px] undefined text-body-600 with-inner-html"
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Option 4 ",
                              }
                            }
                            data-testid="txt"
                            htmlFor=":r40:"
                          />
                        </label>
                        <input
                          checked={false}
                          className="h-4 w-4 cursor-pointer rounded-sm border-neutral-400 transition-all duration-300 checked:text-primary-500 focus:ring-transparent disabled:bg-neutral-400 lg:h-5 lg:w-5"
                          id=":r40:"
                          name=""
                          onClick={[Function]}
                          type="checkbox"
                        />
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
              <div
                className="w-full"
              >
                <div
                  className="flex w-full items-center justify-between mt-12"
                >
                  <button
                    className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-[10.5px] rounded-md px-4 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black min-h-10 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
                    onClick={[Function]}
                  >
                    <span
                      className="flex items-center text-bold-caption-200"
                    >
                      Back
                    </span>
                  </button>
                  <button
                    className="bg-primary-500 hover:bg-primary-400 py-2 !text-white rounded-md px-4 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black min-h-10 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="flex items-center text-bold-caption-200"
                    >
                      Save and Continue
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Extensive/Form/Wizard Edit Form 1`] = `
<div
  className="flex w-full justify-center bg-background px-3"
>
  <div>
    <div
      className="mx-auto mt-0 max-w-[82vw] px-6 py-10 xl:px-0"
    >
      <div
        className="flex h-full w-full rounded-2xl shadow"
      >
        <div
          aria-orientation="vertical"
          className="flex w-full max-w-[86px] flex-grow flex-col md:max-w-[280px] h-[calc(100vh-285px)] overflow-auto"
          role="tablist"
        >
          <button
            aria-checked="false"
            aria-selected="true"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b border-neutral-100 border-r-white bg-white text-neutral-1000 peer-aria-checked:shadow-t-secondary"
            data-headlessui-state="selected"
            disabled={false}
            id="headlessui-tabs-tab-:r41:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={0}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Simple Inputs",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r42:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Dropdown Inputs",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r43:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Select Inputs",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r44:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "File Uploader",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r45:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Tree species input",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r46:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "What are your funding sources?*",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b-0 border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r47:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Section subtitle",
                }
              }
              data-testid="txt"
            />
          </button>
          <button
            aria-checked="false"
            aria-selected="false"
            className="flex min-h-[70px] w-full items-center justify-start py-4 px-6 w-full items-center focus:outline-none disabled:text-neutral-900 border-b border-neutral-100 bg-neutral-300 text-neutral-900"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-tabs-tab-:r48:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="option"
            tabIndex={-1}
          >
            <p
              className="w-full text-left line-clamp-2 md:pr-6 text-14-bold with-inner-html"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Draw on Map",
                }
              }
              data-testid="txt"
            />
          </button>
          <div
            className="flex-1 border border-neutral-100 bg-white"
          />
        </div>
        <div
          className="w-full overflow-hidden border border-l-0 border-neutral-100"
        >
          <div
            className="h-[calc(100vh-287px)] overflow-auto"
          >
            <div
              className="flex-1 bg-white px-16 pt-8 pb-15"
              id="step"
            >
              <div
                className="flex items-center justify-between"
              >
                <p
                  className="text-heading-700"
                  data-testid="txt"
                >
                  Simple Inputs
                </p>
              </div>
              <p
                className="mt-8 text-body-600 with-inner-html"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "These are all simple inputs",
                  }
                }
                data-testid="txt"
              />
              <div
                className="my-8 h-[2px] w-full bg-neutral-200"
              />
              <ul>
                <li
                  className="mt-8"
                >
                  <div
                    className="relative space-y-2"
                  >
                    <label
                      className="mr-2 inline uppercase text-bold-body-300"
                      data-testid="txt"
                      htmlFor=":r49:"
                    >
                      Simple text field *
                    </label>
                    <div
                      className="relative"
                    >
                      <input
                        aria-describedby=":r49:-description"
                        aria-invalid={false}
                        className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
                        id=":r49:"
                        name="text_field"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onChangeCapture={[Function]}
                        placeholder="Please enter ..."
                        type="text"
                      />
                    </div>
                  </div>
                </li>
                <li
                  className="mt-8"
                >
                  <div
                    className="relative space-y-2"
                  >
                    <label
                      className="mr-2 inline uppercase text-bold-body-300"
                      data-testid="txt"
                      htmlFor=":r4a:"
                    >
                      Simple number field *
                    </label>
                    <div
                      className="relative"
                    >
                      <input
                        aria-describedby=":r4a:-description"
                        aria-invalid={false}
                        className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
                        id=":r4a:"
                        name="number_field"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onChangeCapture={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Please enter ..."
                        type="number"
                      />
                    </div>
                  </div>
                </li>
              </ul>
              <div
                className="w-full"
              >
                <div
                  className="flex w-full items-center justify-between mt-12"
                >
                  <button
                    className="bg-primary-500 hover:bg-primary-400 py-2 !text-white rounded-md px-4 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black min-h-10 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="flex items-center text-bold-caption-200"
                    >
                      Save
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
